--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy React-E-Commerce-With-Javascript 
+name: Deploy React-E-Commerce-With-Javascript
 
 on:
   workflow_dispatch:
@@ -27,6 +27,8 @@ jobs:
         # Build the project
       - name: Build
         run: npm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
         # Deploy the project to GitHub Pages
       - name: Deploy
